# wild10

./: README.es.md  README.md
LLMs/: Lab_2_fine_tune_generative_ai_model.ipynb  README.md
LLMs/.ipynb_checkpoints/: Lab_3_fine_tune_model_to_detoxify_summaries-checkpoint.ipynb
LLMs/mcp/: .gitignore  README.md  test_sql_python.py
LLMs/mcp/localAgentHelper/: pyproject.toml
LLMs/mcp/weather-server/: README.md  pyproject.toml
LLMs/mcp/weather-server/src/: weather-server.py
LLMs/reflection_agent/: .gitignore  Readme.md  chains.py  config.py  llm_chat.py  main.py  pyproject.toml
docker+k/: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  requirements.txt
multiprocessing/: README.md
python/: README.md  inheritance_demo.py  string_filter.py  typedDict.py  typing_any.py  typing_union.py
python/languages/: hello-world.py  piramid.py
python/leetcode/: 1137-Ntribonacci.py  125-validPalindrome.py  2648-generativefibonacci.py  509-fibonacci.py  70-climbingStairs.py  book.py
