[project]
name = "localagenthelper"
version = "0.1.0"
description = ""
authors = [
    {name = "wild10",email = "wildr.10@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "mcp (>=1.26.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
